2000-03-15  Jason Merrill  <jason@casey.cygnus.com>

	* cpphash.c (dump_hash_helper): Take the slot, not the element.

Wed Mar 15 14:28:54 2000  Jason Eckhardt  <jle@cygnus.com>

	* flow.c (verify_flow_info): Check for unconditional return.

Wed Mar 15 11:34:27 2000  Jim Wilson  <wilson@cygnus.com>

	* config/ia64/ia64.md (restore_stack_nonlocal): New.
	* config/ia64/lib1funcs.asm (__ia64_nonlocal_goto): Delete padding nop.
	(__ia64_restore_stack_nonlocal): New.
	* config/ia64/t-ia64 (LIB1ASMFUNCS): Add __restore_stack_nonlocal.

2000-03-15  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* cpphash.c (collect_formal_parameters): Do not complain about
	parameter names that just start with `__VA_ARGS__'.

Wed Mar 15 13:26:58 MET 2000  Jan Hubicka  <jh@suse.cz>

	* i386.md (movhi_1): Promote movw imm, reg to movl imm, reg and
	movw reg, reg to movzwl reg, reg on PARTIAL_REGISTER_STALL machines.
	* i386.c (pentiumpro_cost): Set mul cost to 4.
	(x86_use_movx): Set for PPro.

Wed Mar 15 13:07:05 MET 2000  Jan Hubicka  <jh@suse.cz>

	* i386.md (ix86_compute_frame_size): stack_alignment_needed is
	STACK_BOUNDARY for empty frames now.

2000-03-14  Mark Mitchell  <mark@codesourcery.com>

	* stor-layout.c (layout_union): Remove.
	(layout_union_field): New function, split out from layout_union.
	(finish_union_layout): Likewise.
	(layout_field): Handle unions by calling layout_union_field.
	(finish_record_layout): Handle unions.
	(layout_type): Combine RECORD_TYPE, UNION_TYPE, and
	QUAL_UNION_TYPE handling.

Wed Feb 23 13:00:06 CET 2000  Jan Hubicka  <jh@suse.cz>

        * flow.c (fixup_reorder_chain): Avoid double labels in the basic block;
        end of basic block is jump_insn, not barrier; use create_basic_block
        instead of creating basic block by hand.

2000-03-14  Jason Eckhardt  <jle@cygnus.com>

	* flow.c (reorder_basic_blocks): Account for barriers when writing
	over NEXT_INSN (last_bb->end).
	(verify_flow_info): Add check for missing barriers.
